--- a/specification/devtestlabs/resource-manager/Microsoft.DevTestLab/stable/2021-09-01/examples/ServiceFabrics_ListApplicableSchedules.json
+++ b/specification/devtestlabs/resource-manager/Microsoft.DevTestLab/stable/2021-09-01/examples/ServiceFabrics_ListApplicableSchedules.json
@@ -46,6 +46,7 @@
             },
             "id": "/subscriptions/{subscriptionId}/resourcegroups/resourceGroupName/providers/microsoft.devtestlab/labs/{labName}/schedules/{scheduleName}",
             "name": "{scheduleName}",
+            "location": "{location}",
             "type": "Microsoft.DevTestLab/labs/schedules"
           },
           "labVmsStartup": {
@@ -81,13 +82,11 @@
             },
             "id": "/subscriptions/{subscriptionId}/resourcegroups/resourceGroupName/providers/microsoft.devtestlab/labs/{labName}/schedules/{scheduleName}",
             "name": "{scheduleName}",
+            "location": "{location}",
             "type": "Microsoft.DevTestLab/labs/schedules"
           }
         },
-        "type": "{scheduleType}",
-        "tags": {
-          "tagName1": "tagValue1"
-        }
+        "type": "{scheduleType}"
       }
     }
   }
