--- a/specification/resources/resource-manager/Microsoft.Solutions/stable/2019-07-01/managedapplications.json
+++ b/specification/resources/resource-manager/Microsoft.Solutions/stable/2019-07-01/managedapplications.json
@@ -284,6 +284,12 @@
               "$ref": "#/definitions/Application"
             }
           },
+          "202": {
+            "description": "Accepted - Returns information about the managed application, including provisioning status.",
+            "schema": {
+              "$ref": "#/definitions/Application"
+            }
+          },
           "default": {
             "description": "Error response describing why the operation failed.",
             "schema": {
@@ -1913,6 +1919,13 @@
     "ApplicationPackageLockingPolicyDefinition": {
       "properties": {
         "allowedActions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "The deny assignment excluded actions."
+        },
+        "allowedDataActions": {
           "type": "array",
           "items": {
             "type": "string"
