--- a/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
+++ b/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
@@ -254,6 +254,12 @@
               "$ref": "#/definitions/Application"
             }
           },
+          "202": {
+            "description": "Accepted - Returns information about the managed application, including provisioning status.",
+            "schema": {
+              "$ref": "#/definitions/Application"
+            }
+          },
           "default": {
             "description": "Error response describing why the operation failed.",
             "schema": {
@@ -986,7 +992,7 @@
           "pattern": "^[-\\w\\._,\\(\\)]+$"
         },
         "identity": {
-          "$ref": "../../../../../common-types/resource-management/v3/managedidentity.json#/definitions/ManagedServiceIdentity",
+          "$ref": "#/definitions/Identity",
           "description": "The identity of the resource."
         }
       },
@@ -1019,7 +1025,7 @@
           "pattern": "^[-\\w\\._,\\(\\)]+$"
         },
         "identity": {
-          "$ref": "../../../../../common-types/resource-management/v3/managedidentity.json#/definitions/ManagedServiceIdentity",
+          "$ref": "#/definitions/Identity",
           "description": "The identity of the resource."
         }
       },
@@ -1367,6 +1373,57 @@
       ],
       "description": "SKU for the resource."
     },
+    "Identity": {
+      "properties": {
+        "principalId": {
+          "readOnly": true,
+          "type": "string",
+          "description": "The principal ID of resource identity."
+        },
+        "tenantId": {
+          "readOnly": true,
+          "type": "string",
+          "description": "The tenant ID of resource."
+        },
+        "type": {
+          "type": "string",
+          "description": "The identity type.",
+          "enum": [
+            "SystemAssigned",
+            "UserAssigned",
+            "SystemAssigned, UserAssigned",
+            "None"
+          ],
+          "x-ms-enum": {
+            "name": "ResourceIdentityType",
+            "modelAsString": false
+          }
+        },
+        "userAssignedIdentities": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/userAssignedResourceIdentity"
+          },
+          "description": "The list of user identities associated with the resource. The user identity dictionary key references will be resource ids in the form: '/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.ManagedIdentity/userAssignedIdentities/{identityName}'."
+        }
+      },
+      "description": "Identity for the resource."
+    },
+    "userAssignedResourceIdentity": {
+      "properties": {
+        "principalId": {
+          "readOnly": true,
+          "type": "string",
+          "description": "The principal id of user assigned identity."
+        },
+        "tenantId": {
+          "readOnly": true,
+          "type": "string",
+          "description": "The tenant id of user assigned identity."
+        }
+      },
+      "description": "Represents the user assigned identity that is contained within the UserAssignedIdentities dictionary on ResourceIdentity"
+    },
     "Resource": {
       "type": "object",
       "properties": {
@@ -1591,6 +1648,13 @@
       "type": "object",
       "properties": {
         "allowedActions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "The deny assignment excluded actions."
+        },
+        "allowedDataActions": {
           "type": "array",
           "items": {
             "type": "string"
