--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/examples/Apps_List.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/examples/Apps_List.json
@@ -14,7 +14,6 @@
               "public": true,
               "url": "myapp.myservice.azuremicroservices.io",
               "provisioningState": "Succeeded",
-              "activeDeploymentName": "mydeployment1",
               "fqdn": "myapp.mydomain.com",
               "httpsOnly": false,
               "enableEndToEndTLS": false,
@@ -53,6 +52,14 @@
                   "storageId": "myASCStorageID"
                 }
               ]
+            },
+            "systemData": {
+              "createdBy": "sample-user",
+              "createdByType": "User",
+              "createdAt": "2021-08-11T03:16:03.944Z",
+              "lastModifiedBy": "sample-user",
+              "lastModifiedByType": "User",
+              "lastModifiedAt": "2021-08-11T03:17:03.944Z"
             },
             "type": "Microsoft.AppPlatform/Spring/apps",
             "identity": {
