adding enums for commandType and taskType discriminator

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
@@ -22,6 +22,10 @@
       "description": "Base class for all types of DMS task properties. If task is not supported by current client, this object is returned.",
       "properties": {
         "taskType": {
+          "enum": [
+            "ConnectToTarget.SqlDb",
+            "Service.Check.OCI"
+          ],
           "description": "Task type.",
           "type": "string"
         },
