adding x-ms-enum for commandType and taskType (v1)

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
@@ -26,6 +26,10 @@
             "ConnectToTarget.SqlDb",
             "Service.Check.OCI"
           ],
+          "x-ms-enum": {
+            "name": "TaskType",
+            "modelAsString": true
+          },
           "description": "Task type.",
           "type": "string"
         },
