adding remaining enum values for taskType and commandType

--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/Tasks.json
@@ -23,8 +23,44 @@
       "properties": {
         "taskType": {
           "enum": [
+            "Connect.MongoDb",
+            "ConnectToSource.SqlServer",
+            "ConnectToSource.SqlServer.Sync",
+            "ConnectToSource.PostgreSql.Sync",
+            "ConnectToSource.MySql",
+            "ConnectToSource.Oracle.Sync",
             "ConnectToTarget.SqlDb",
-            "Service.Check.OCI"
+            "ConnectToTarget.SqlDb.Sync",
+            "ConnectToTarget.AzureDbForPostgreSql.Sync",
+            "ConnectToTarget.Oracle.AzureDbForPostgreSql.Sync",
+            "ConnectToTarget.AzureSqlDbMI",
+            "ConnectToTarget.AzureSqlDbMI.Sync.LRS",
+            "ConnectToTarget.AzureDbForMySql",
+            "GetUserTables.Sql",
+            "GetUserTables.AzureSqlDb.Sync",
+            "GetUserTablesOracle",
+            "GetUserTablesPostgreSql",
+            "GetUserTablesMySql",
+            "Migrate.MongoDb",
+            "Migrate.SqlServer.AzureSqlDbMI",
+            "Migrate.SqlServer.AzureSqlDbMI.Sync.LRS",
+            "Migrate.SqlServer.SqlDb",
+            "Migrate.SqlServer.AzureSqlDb.Sync",
+            "Migrate.MySql.AzureDbForMySql.Sync",
+            "Migrate.MySql.AzureDbForMySql",
+            "Migrate.PostgreSql.AzureDbForPostgreSql.SyncV2",
+            "Migrate.Oracle.AzureDbForPostgreSql.Sync",
+            "ValidateMigrationInput.SqlServer.SqlDb.Sync",
+            "ValidateMigrationInput.SqlServer.AzureSqlDbMI",
+            "ValidateMigrationInput.SqlServer.AzureSqlDbMI.Sync.LRS",
+            "Validate.MongoDb",
+            "Validate.Oracle.AzureDbPostgreSql.Sync",
+            "GetTDECertificates.Sql",
+            "Migrate.Ssis",
+            "Service.Check.OCI",
+            "Service.Upload.OCI",
+            "Service.Install.OCI",
+            "MigrateSchemaSqlServerSqlDb"
           ],
           "x-ms-enum": {
             "name": "TaskType",
