--- a/.github/pull_request_assignment.yml
+++ b/.github/pull_request_assignment.yml
@@ -6,18 +6,24 @@
     reviewers:
       - kristapratico
       - maririos
+      - johanste
+      - markweitzel
 
 - rule:
     paths:
       - "specification/confidentialledger/data-plane/**"
     reviewers:
-      - christothes 
+      - christothes
+      - JeffreyRichter
+      - markweitzel
       
 - rule:
     paths:
       - "specification/@(applicationinsights|operationalinsights)/**"
     reviewers:
       - akning-ms
+      - JeffreyRichter
+      - markweitzel
 
 - rule:
     # eventgrid data-plane PR
@@ -25,6 +31,8 @@
       - "specification/eventgrid/data-plane/**"
     reviewers:
       - lmazuel
+      - mikekistler
+      - weidongxu-microsoft
 
 - rule:
     # synapse data-plane PR
@@ -32,6 +40,8 @@
       - "specification/synapse/data-plane/**"
     reviewers:
       - lmazuel
+      - mikekistler
+      - weidongxu-microsoft
 
 - rule:
     # data-plane PR
@@ -39,7 +49,9 @@
       - "specification/**/data-plane/iot**"
     reviewers:
       - drwill-ms
-
+      - JeffreyRichter
+      - rysweet
+      
 - rule:
     # data-plane PR
     paths:
@@ -55,7 +67,8 @@
     reviewers:
       - lirenhe
       - raych1
-
+      - mikekistler
+      - weidongxu-microsoft
 
 - rule:
     paths: "specification/common-types/**"
@@ -72,11 +85,15 @@
     paths: "specification/@(resources|powerplatform|appplatform|deviceupdate|servicelinker)/**"
     reviewers:
       - raych1
+      - JeffreyRichter
+      - markweitzel
       
 - rule:
     paths: "specification/@(security|edgeorder|synapse)/**"
     reviewers:
       - ruowan
+      - mikekistler
+      - weidongxu-microsoft
       
 - rule:
     paths: "specification/sql/**"
@@ -87,51 +104,67 @@
     paths: "specification/signalr/**"
     reviewers:
       - leni-msft
+      - JeffreyRichter
+      - johanste
       
 - rule:
     paths: "specification/eventhub/**"
     reviewers:
       - ruowan
+      - markweitzel
+      - johanste
+      
 - rule:
     paths: "specification/compute/**"
     reviewers:
       - ArcturusZhang
+      - weidongxu-microsoft
+      - mikekistler
 
 - rule:
     paths:
       - "specification/machinelearningservices/**"
     reviewers:
       - ArcturusZhang
-
+      - markweitzel
+      
 - rule:
     paths:
       - "specification/authorization/**"
     reviewers:
       - ruowan
+      - markweitzel
 
 - rule:
     paths:
       - "specification/datafactory/**"
     reviewers:
       - leni-msft
+       - mikekistler
+       - markweitzel
 
 - rule:
     paths:
       - "specification/storage/**"
     reviewers:
       - jianyexi
-
+      - markweitzel
+      - johanste
 
 - rule:	
     paths: "specification/mediaservices/**"	
     reviewers:	
       - allenjzhang
+      - JeffreyRichter
+      - johanste
       
 - rule:
     paths:
       - "specification/containerregistry/**"
     reviewers:
       - fengzhou-msft
+      - mikekistler
+      - markweitzel
 
 - rule:
     paths:
@@ -139,6 +172,8 @@
       - "specification/hdinsight/**"
     reviewers:
       - leni-msft
+      - JeffreyRichter
+      - rysweet
 
 - rule:
     paths:
@@ -151,6 +186,8 @@
       - "specification/keyvault/**"
     reviewers:
       - zhenglaizhang
+      - markweitzel
+      - JeffreyRichter
 
 - rule:
     paths:
@@ -158,6 +195,8 @@
     reviewers:
       - josefree
       - akning-ms
+      - JeffreyRichter
+      - markweitzel
 
 
 - rule:
