--- a/.github/pull_request_assignment.yml
+++ b/.github/pull_request_assignment.yml
@@ -1,27 +1,18 @@
 ---
-- rule:
-    # translator data-plane PR
-    paths:
-      - "specification/cognitiveservices/data-plane/TranslatorText/**"
-    reviewers:
-      - kristapratico
-      - maririos
-      - johanste
-      - markweitzel
-
-- rule:
-    paths:
-      - "specification/confidentialledger/data-plane/**"
-    reviewers:
-      - christothes
-      - JeffreyRichter
-      - markweitzel
       
 - rule:
     paths:
       - "specification/@(applicationinsights|operationalinsights)/**"
     reviewers:
       - akning-ms
+      - JeffreyRichter
+      - markweitzel
+      
+- rule:
+    paths:
+      - "specification/confidentialledger/data-plane/**"
+    reviewers:
+      - christothes
       - JeffreyRichter
       - markweitzel
 
@@ -33,6 +24,24 @@
       - lmazuel
       - mikekistler
       - weidongxu-microsoft
+      
+- rule:
+    # data-plane PR
+    paths:
+      - "specification/**/data-plane/iot**"
+    reviewers:
+      - drwill-ms
+      - JeffreyRichter
+      - rysweet
+- rule:
+    # translator data-plane PR
+    paths:
+      - "specification/cognitiveservices/data-plane/TranslatorText/**"
+    reviewers:
+      - kristapratico
+      - maririos
+      - johanste
+      - markweitzel
 
 - rule:
     # synapse data-plane PR
@@ -42,24 +51,22 @@
       - lmazuel
       - mikekistler
       - weidongxu-microsoft
-
-- rule:
-    # data-plane PR
-    paths:
-      - "specification/**/data-plane/iot**"
-    reviewers:
-      - drwill-ms
-      - JeffreyRichter
-      - rysweet
       
 - rule:
     # data-plane PR
     paths:
       - "specification/**/data-plane/**"
     reviewers:
-      - anuchandy
-      - jhendrixMSFT
-      - tjprescott
+      - JeffreyRichter
+      - johanste
+      - rysweet
+      - tg-msft
+      - markweitzel
+      - mikekistler
+      - weidongxu-microsoft
+      - haocornell-ms
+      - blackrider97
+      - MushMal
 
 - rule:
     paths:
@@ -148,7 +155,7 @@
       - "specification/storage/**"
     reviewers:
       - jianyexi
-      - markweitzel
+      - tg-msft
       - johanste
 
 - rule:	
@@ -197,7 +204,6 @@
       - akning-ms
       - JeffreyRichter
       - markweitzel
-
 
 - rule:
     paths:
