add more required properties

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -707,6 +707,9 @@
           "description": "The provisioning state of the resource."
         }
       },
+      "required": [
+        "appliesToGroups"
+      ],
       "description": "Defines the rule collection properties."
     },
     "BaseAdminRule": {
@@ -825,7 +828,8 @@
       "required": [
         "protocol",
         "access",
-        "direction"
+        "direction",
+        "priority"
       ],
       "description": "Security admin rule resource."
     },
@@ -975,6 +979,9 @@
           "description": "Network manager group Id."
         }
       },
+      "required": [
+        "networkGroupId"
+      ],
       "description": "Network manager security group item."
     },
     "AddressPrefixItem": {
