--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
@@ -304,7 +304,8 @@
         }
       },
       "required": [
-        "connectivityTopology"
+        "connectivityTopology",
+        "appliesToGroups"
       ],
       "description": "Properties of network manager connectivity configuration"
     },
@@ -365,7 +366,11 @@
           },
           "description": "Group connectivity type."
         }
-      }
+      },
+      "required": [
+        "networkGroupId",
+        "groupConnectivity"
+      ]
     }
   },
   "parameters": {
