--- a/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/TasksCommon.json
+++ b/specification/datamigration/resource-manager/Microsoft.DataMigration/preview/2021-10-30-preview/definitions/TasksCommon.json
@@ -476,6 +476,14 @@
           "additionalProperties": {
             "type": "string"
           }
+        },
+        "schemaSetting": {
+          "type": "object",
+          "description": "Settings selected for DB schema migration."
+        },
+        "id": {
+          "type": "string",
+          "description": "id of the database"
         }
       }
     },
@@ -750,6 +758,10 @@
           "items": {
             "type": "string"
           }
+        },
+        "id": {
+          "type": "string",
+          "description": "id of the database"
         }
       },
       "required": [
