removed stages from response

--- a/specification/cdn/resource-manager/Microsoft.Cdn/preview/2022-01-01-preview/examples/Policies_ApplyPolicy.json
+++ b/specification/cdn/resource-manager/Microsoft.Cdn/preview/2022-01-01-preview/examples/Policies_ApplyPolicy.json
@@ -15,14 +15,7 @@
       "body": {
         "deploymentStatusId": 0,
         "status": "NotStarted",
-        "creationTime": "2021-12-10T20:56:37.396Z",
-        "stages": [
-          {
-            "name": "string",
-            "StageId": 0,
-            "status": "NotStarted"
-          }
-        ]
+        "creationTime": "2021-12-10T20:56:37.396Z"
       }
     }
   }
