--- a/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
+++ b/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
@@ -255,10 +255,7 @@
             }
           },
           "202": {
-            "description": "Accepted - Returns information about the managed application, including provisioning status.",
-            "schema": {
-              "$ref": "#/definitions/Application"
-            }
+            "description": "Accepted - Returns this status until the asynchronous operation has completed."
           },
           "default": {
             "description": "Error response describing why the operation failed.",
@@ -1659,7 +1656,7 @@
           "items": {
             "type": "string"
           },
-          "description": "The deny assignment excluded actions."
+          "description": "The deny assignment excluded data actions."
         }
       },
       "description": "Managed application locking policy."
