--- a/specification/resources/resource-manager/Microsoft.Solutions/preview/2020-08-21-preview/managedapplications.json
+++ b/specification/resources/resource-manager/Microsoft.Solutions/preview/2020-08-21-preview/managedapplications.json
@@ -291,10 +291,7 @@
             }
           },
           "202": {
-            "description": "Accepted - Returns information about the managed application, including provisioning status.",
-            "schema": {
-              "$ref": "#/definitions/Application"
-            }
+            "description": "Accepted - Returns this status until the asynchronous operation has completed."
           },
           "default": {
             "description": "Error response describing why the operation failed.",
@@ -1943,7 +1940,7 @@
           "items": {
             "type": "string"
           },
-          "description": "The deny assignment excluded actions."
+          "description": "The deny assignment excluded data actions."
         }
       },
       "description": "Managed application locking policy."
