--- a/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
+++ b/specification/solutions/resource-manager/Microsoft.Solutions/stable/2021-07-01/managedapplications.json
@@ -1371,6 +1371,7 @@
       "description": "SKU for the resource."
     },
     "Identity": {
+      "type": "object",
       "properties": {
         "principalId": {
           "readOnly": true,
@@ -1407,6 +1408,7 @@
       "description": "Identity for the resource."
     },
     "userAssignedResourceIdentity": {
+      "type": "object",
       "properties": {
         "principalId": {
           "readOnly": true,
