--- a/specification/cdn/resource-manager/Microsoft.Cdn/preview/2022-01-01-preview/cdnwebapplicationfirewall.json
+++ b/specification/cdn/resource-manager/Microsoft.Cdn/preview/2022-01-01-preview/cdnwebapplicationfirewall.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "2022-01-01-preview",
+    "version": "2021-06-01",
     "title": "Azure CDN WebApplicationFirewallManagement",
     "description": "APIs to manage web application firewall rules for Azure CDN"
   },
@@ -911,7 +911,7 @@
       "in": "query",
       "required": true,
       "type": "string",
-      "description": "Version of the API to be used with the client request. Current version is 2022-01-01-preview."
+      "description": "Version of the API to be used with the client request. Current version is 2021-06-01."
     },
     "PolicyNameParameter": {
       "name": "policyName",
