Fix Prettier check

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2021-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2021-09-01-preview/appplatform.json
@@ -4281,7 +4281,10 @@
         "content": {
           "description": "The content of uploaded certificate.",
           "type": "string",
-          "x-ms-mutability": ["create", "update"]
+          "x-ms-mutability": [
+            "create",
+            "update"
+          ]
         }
       },
       "x-ms-discriminator-value": "ContentCertificate"
