ContentCertificateProperties.content should be secret

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2022-01-01-preview/appplatform.json
@@ -8151,8 +8151,7 @@
     "ContentCertificateProperties": {
       "description": "Properties of certificate imported from key vault.",
       "required": [
-        "type",
-        "content"
+        "type"
       ],
       "type": "object",
       "allOf": [
@@ -8163,7 +8162,11 @@
       "properties": {
         "content": {
           "description": "The content of uploaded certificate.",
-          "type": "string"
+          "type": "string",
+          "x-ms-mutability": [
+            "create",
+            "update"
+          ]
         }
       },
       "x-ms-discriminator-value": "ContentCertificate"
