fixing validation errors

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
@@ -196,6 +196,7 @@
   },
   "definitions": {
     "ActiveConfigurationParameter": {
+      "type": "object",
       "properties": {
         "regions": {
           "type": "array",
