--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerConnectivityConfiguration.json
@@ -202,6 +202,7 @@
   },
   "definitions": {
     "ConnectivityConfigurationListResult": {
+      "type": "object",
       "properties": {
         "value": {
           "type": "array",
@@ -218,6 +219,7 @@
       "description": "Result of the request to list network manager connectivity configurations. It contains a list of configurations and a link to get the next set of results."
     },
     "ConnectivityConfiguration": {
+      "type": "object",
       "properties": {
         "properties": {
           "x-ms-client-flatten": true,
@@ -238,6 +240,7 @@
       "description": "The network manager connectivity configuration resource"
     },
     "ConnectivityConfigurationProperties": {
+      "type": "object",
       "properties": {
         "displayName": {
           "type": "string",
