--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -555,6 +555,7 @@
   },
   "definitions": {
     "SecurityConfiguration": {
+      "type": "object",
       "properties": {
         "properties": {
           "x-ms-client-flatten": true,
@@ -575,6 +576,7 @@
       "description": "Defines the security configuration"
     },
     "SecurityConfigurationPropertiesFormat": {
+      "type": "object",
       "properties": {
         "displayName": {
           "type": "string",
@@ -617,6 +619,7 @@
       "description": "Defines the security Configuration properties."
     },
     "SecurityConfigurationListResult": {
+      "type": "object",
       "properties": {
         "value": {
           "type": "array",
@@ -633,6 +636,7 @@
       "description": "A list of network manager security configurations"
     },
     "AdminRuleListResult": {
+      "type": "object",
       "properties": {
         "value": {
           "type": "array",
@@ -649,6 +653,7 @@
       "description": "security configuration admin rule list result."
     },
     "RuleCollectionListResult": {
+      "type": "object",
       "properties": {
         "value": {
           "type": "array",
@@ -665,6 +670,7 @@
       "description": "Security configuration rule collection list result."
     },
     "RuleCollection": {
+      "type": "object",
       "properties": {
         "properties": {
           "x-ms-client-flatten": true,
@@ -685,6 +691,7 @@
       "description": "Defines the rule collection."
     },
     "RuleCollectionPropertiesFormat": {
+      "type": "object",
       "properties": {
         "displayName": {
           "type": "string",
@@ -713,6 +720,7 @@
       "description": "Defines the rule collection properties."
     },
     "BaseAdminRule": {
+      "type": "object",
       "properties": {
         "kind": {
           "type": "string",
@@ -744,6 +752,7 @@
       "description": "Network base admin rule."
     },
     "AdminRule": {
+      "type": "object",
       "properties": {
         "properties": {
           "$ref": "#/definitions/AdminPropertiesFormat",
@@ -760,6 +769,7 @@
       "x-ms-discriminator-value": "Custom"
     },
     "AdminPropertiesFormat": {
+      "type": "object",
       "properties": {
         "displayName": {
           "type": "string",
@@ -834,6 +844,7 @@
       "description": "Security admin rule resource."
     },
     "DefaultAdminRule": {
+      "type": "object",
       "properties": {
         "properties": {
           "$ref": "#/definitions/DefaultAdminPropertiesFormat",
