--- a/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Create.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/preview/2021-12-01-preview/examples/sapvirtualinstances/SAPApplicationServerInstances_Create.json
@@ -28,12 +28,17 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
+          "instanceNo": 1,
+          "subnet": null,
+          "hostname": "vh-nw1",
+          "kernelVersion": "777",
+          "kernelPatch": "patch 300",
           "ipAddress": "10.0.0.5",
-          "diaPort": 1234,
-          "httpPort": 3312,
-          "httpsPort": 3313,
+          "gatewayPort": 3300,
+          "icmHttpPort": 3312,
+          "icmHttpsPort": 3313,
           "virtualMachineId": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Compute/virtualMachines/app01-vm",
-          "status": "Starting",
+          "status": "Running",
           "health": "Unknown",
           "errors": null,
           "provisioningState": "Succeeded"
@@ -56,12 +61,17 @@
           "lastModifiedAt": "2021-08-19T15:10:46.196Z"
         },
         "properties": {
+          "instanceNo": 1,
+          "subnet": null,
+          "hostname": "vh-nw1",
+          "kernelVersion": "777",
+          "kernelPatch": "patch 300",
           "ipAddress": "10.0.0.5",
-          "diaPort": 1234,
-          "httpPort": 3312,
-          "httpsPort": 3313,
+          "gatewayPort": 3300,
+          "icmHttpPort": 3312,
+          "icmHttpsPort": 3313,
           "virtualMachineId": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Compute/virtualMachines/app01-vm",
-          "status": "Starting",
+          "status": "Running",
           "health": "Unknown",
           "errors": null,
           "provisioningState": "Succeeded"
