adding policy based services check

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationList.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationList.json
@@ -26,7 +26,8 @@
               "description": "A sample policy",
               "provisioningState": "Succeeded",
               "securityType": "AdminPolicy",
-              "deleteExistingNSGs": "True"
+              "deleteExistingNSGs": "True",
+              "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
             }
           }
         ],
