--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
@@ -25,7 +25,8 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
         }
       }
     }
