--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
@@ -9,7 +9,8 @@
       "properties": {
         "description": "A sample policy",
         "securityType": "AdminPolicy",
-        "deleteExistingNSGs": "True"
+        "deleteExistingNSGs": "True",
+        "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
       }
     }
   },
@@ -32,7 +33,8 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
         }
       }
     },
@@ -54,7 +56,8 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
         }
       }
     }
