fix prettier check

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationList.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationList.json
@@ -27,7 +27,9 @@
               "provisioningState": "Succeeded",
               "securityType": "AdminPolicy",
               "deleteExistingNSGs": "True",
-              "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
+              "applyOnNetworkIntentPolicyBasedServices": [
+                "None"
+              ]
             }
           }
         ],
