--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
@@ -34,7 +34,9 @@
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
           "deleteExistingNSGs": "True",
-          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     },
