--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
@@ -26,7 +26,9 @@
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
           "deleteExistingNSGs": "True",
-          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     }
