adding policy based services check

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
@@ -10,7 +10,9 @@
         "description": "A sample policy",
         "securityType": "AdminPolicy",
         "deleteExistingNSGs": "True",
-        "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
+        "applyOnNetworkIntentPolicyBasedServices": [
+          "None"
+        ]
       }
     }
   },
@@ -59,7 +61,9 @@
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
           "deleteExistingNSGs": "True",
-          "applyOnNetworkIntentPolicyBasedServices": [ "None" ]
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     }
